--- a/sytle.css
+++ b/sytle.css
@@ -11,17 +11,19 @@ body
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-    background-color: rgb(43, 29, 29);
-    font-family: 'Roboto', sans-serif;
- 
+    font-family: 'Salsa', cursive;
+    background-image: url("image.jpg");
+    background-repeat: no-repeat;
+    background-size: 200vh;
 }
 
 .conatiner
 {
-    background: linear-gradient(135deg, #00feba,#5b548a);
+    background: linear-gradient(135deg, #00feba,#5b548a63);
 
     width: 350px;
-   height: auto;
+    padding-top: 1%;
+    padding-bottom: 0.5%;
     border-radius: 20px;
 }
 
@@ -100,7 +102,7 @@ padding-bottom: 50px;
 .col i 
 {
     font-size: 25px;
-    color: rgb(50, 45, 45);
+    color: black;
     
 }
 
